tests/negative/parser/missing_newline.orng
fn main() -> Int {
    let x = 4 let y = 5
}